test: expand coverage with security and CRUD tests; docs: add TESTING.md; ci: add lint/test/build workflow; chore: coverage config and jest-dom setup; ignore: coverage/env caches and dist-server tests

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,22 @@ node_modules/
 # Build output
 dist/
 .vite/
+dist-server/__tests__/
+
+# Test coverage
+coverage/
+
+# Environment files
+.env
+.env.*
+!.env.example
+
+# TypeScript build info
+*.tsbuildinfo
+
+# Lint/formatter caches
+.eslintcache
+.prettier-cache
 
 # Editor
 .vscode/
