--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "format": "npm run format --workspace=frontend && npm run format --workspace=backend",
     "test": "npm run test --workspace=frontend && npm run test --workspace=backend",
     "test:coverage": "npm run test:coverage --workspace=frontend && npm run test:coverage --workspace=backend",
-    "install:all": "npm install && npm install --workspace=frontend && npm install --workspace=backend"
+    "install:all": "npm install && npm install --workspace=frontend && npm install --workspace=backend",
+    "deploy:local:build": "docker compose -f deployment/docker/docker-compose.yml build",
+    "deploy:local:up": "docker compose -f deployment/docker/docker-compose.yml up -d",
+    "deploy:local:logs": "docker compose -f deployment/docker/docker-compose.yml logs -f --tail=100",
+    "deploy:local:down": "docker compose -f deployment/docker/docker-compose.yml down"
   },
   "devDependencies": {
     "concurrently": "^9.2.0",
