--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,11 @@
     "format": "prettier --write .",
     "test": "vitest run",
     "test:coverage": "vitest run --coverage",
-    "test:watch": "vitest"
+  "test:watch": "vitest",
+  "prisma:generate": "prisma generate",
+  "prisma:migrate": "prisma migrate dev",
+  "db:push": "prisma db push",
+  "db:seed": "node dist/persistence/seed.js"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
@@ -25,9 +29,12 @@
     "express-rate-limit": "^8.0.1",
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.1",
-    "socket.io": "^4.8.1"
+  "jsonwebtoken": "^9.0.2",
+  "morgan": "^1.10.1",
+  "pino": "^9.3.2",
+  "pino-http": "^10.3.0",
+  "socket.io": "^4.8.1",
+  "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -38,7 +45,14 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^20.14.11",
-    "@types/socket.io": "^3.0.1",
+  "@types/socket.io": "^3.0.1",
+  "@types/pino-http": "^5.8.4",
+  "pino-pretty": "^11.2.2",
+  "swagger-ui-express": "^5.0.1",
+  "@types/swagger-ui-express": "^4.1.6",
+  "zod-to-json-schema": "^3.22.5",
+  "@prisma/client": "^5.16.2",
+  "prisma": "^5.16.2",
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
