--- a/deployment/docker/Dockerfile.backend
+++ b/deployment/docker/Dockerfile.backend
@@ -19,6 +19,7 @@ FROM base AS build
 ENV NODE_ENV=production
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
+# Build TypeScript
 RUN npm run build
 
 FROM node:${NODE_VERSION}-alpine AS runtime
@@ -27,6 +28,8 @@ WORKDIR /app
 COPY --from=build /app/node_modules ./node_modules
 COPY --from=build /app/dist ./dist
 COPY --from=build /app/package.json ./package.json
+# Optional: copy prisma client if used later
+# COPY --from=build /app/node_modules/.prisma ./node_modules/.prisma
 EXPOSE 8080
-CMD ["npm", "start"]
-CMD ["node", "dist-server/index.js"]
+# Directly start compiled server entry
+CMD ["node", "dist/index.js"]
