--- a/deployment/docker/docker-compose.yml
+++ b/deployment/docker/docker-compose.yml
@@ -1,24 +1,37 @@
 version: '3.9'
 
 services:
+  backend:
+    build:
+      context: ../../backend
+      # Dockerfile path is resolved relative to build.context
+      dockerfile: ../deployment/docker/Dockerfile.backend
+    env_file:
+      - ../config/.env.local
+    environment:
+      # Explicit overrides / additions
+      - NODE_ENV=production
+      - HOST=0.0.0.0
+      - PORT=8080
+      # Serve built frontend from backend if you prefer single container (uncomment next line after first build)
+      # - SERVE_FRONTEND=true
+    ports:
+      - "8080:8080"
+    restart: unless-stopped
+
   frontend:
     build:
       context: ../../frontend
       dockerfile: ../deployment/docker/Dockerfile.frontend
+    depends_on:
+      - backend
     ports:
       - "3000:80"
     restart: unless-stopped
-    depends_on:
-      - backend
-
-  backend:
-    build:
-      context: ../../backend
-      dockerfile: ../deployment/docker/Dockerfile.backend
-    env_file:
-      - ../config/.env
-    ports:
-      - "8080:8080"
-    restart: unless-stopped
     environment:
-      - NODE_ENV=production
+      # If frontend needs to know API URL at build time you can add VITE_API_URL
+      - VITE_API_URL=http://localhost:8080
+
+networks:
+  default:
+    name: printer-local-net
