--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "pino": "^9.3.2",
     "pino-http": "^10.3.0",
     "prom-client": "^15.1.3",
+  "redis": "^4.7.0",
     "socket.io": "^4.8.1",
     "zod": "^3.23.8"
   },
