--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,15 @@
     "test": "vitest run",
     "test:coverage": "vitest run --coverage",
     "test:watch": "vitest",
+    "loadtest": "node scripts/loadtest.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "db:push": "prisma db push",
     "db:seed": "node dist/persistence/seed.js"
   },
   "dependencies": {
+    "@socket.io/redis-adapter": "^8.3.0",
+    "autocannon": "^7.13.0",
     "bcryptjs": "^3.0.2",
     "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
@@ -34,7 +37,7 @@
     "pino": "^9.3.2",
     "pino-http": "^10.3.0",
     "prom-client": "^15.1.3",
-  "redis": "^4.7.0",
+    "redis": "^4.7.0",
     "socket.io": "^4.8.1",
     "zod": "^3.23.8"
   },
@@ -54,7 +57,6 @@
     "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
-  "socket.io-client": "^4.8.1",
     "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9.33.0",
     "eslint-config-prettier": "^10.1.8",
@@ -62,6 +64,7 @@
     "pino-pretty": "^11.2.2",
     "prettier": "^3.6.2",
     "prisma": "^5.16.2",
+    "socket.io-client": "^4.8.1",
     "supertest": "^7.0.0",
     "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
