--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,12 @@
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "format": "prettier --write .",
+  "typecheck": "tsc --noEmit",
     "test": "vitest run",
     "test:coverage": "vitest run --coverage",
-    "test:watch": "vitest"
+  "test:watch": "vitest",
+  "generate:api": "openapi-typescript http://localhost:3000/api/v1/spec --output src/core/api/types.ts || echo Skipping API generation",
+  "a11y": "vitest run src/__tests__/a11y.test.tsx"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -40,7 +43,8 @@
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "@vitest/coverage-v8": "^3.2.4",
+  "@vitest/coverage-v8": "^3.2.4",
+  "autoprefixer": "^10.4.20",
     "eslint": "^9.33.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-jsx-a11y": "^6.10.2",
@@ -48,8 +52,12 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+  "jest-axe": "^9.0.0",
+  "openapi-typescript": "^7.4.1",
+  "postcss": "^8.4.49",
     "jsdom": "^26.1.0",
     "prettier": "^3.6.2",
+  "tailwindcss": "^3.4.13",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.39.0",
     "vite": "^7.1.2",
