--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
     "recharts": "^2.12.7",
+  "@tanstack/react-query": "^5.56.2",
     "socket.io-client": "^4.8.1",
     "three": "^0.164.1",
     "three-stdlib": "^2.30.4",
