--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "db:seed": "node dist/persistence/seed.js"
   },
   "dependencies": {
+  "@3d/shared": "0.2.0",
     "@socket.io/redis-adapter": "^8.3.0",
     "autocannon": "^7.13.0",
     "bcryptjs": "^3.0.2",
