--- a/shared/package.json
+++ b/shared/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@3d/shared",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "type": "module",
   "main": "dist/index.js",
@@ -9,8 +9,12 @@
     "build": "tsc -p tsconfig.json",
     "clean": "rimraf dist"
   },
+  "dependencies": {
+    "zod": "^3.23.8"
+  },
   "devDependencies": {
     "typescript": "^5.5.4",
-    "rimraf": "^5.0.5"
+    "rimraf": "^5.0.5",
+    "zod-to-json-schema": "^3.22.5"
   }
 }
