--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-  "lint": "eslint . --ext ts,tsx --report-unused-disable-directives",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives",
     "format": "prettier --write .",
     "typecheck": "tsc --noEmit",
     "test": "vitest run",
@@ -19,23 +19,27 @@
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
-  "@dnd-kit/utilities": "^3.2.2",
-  "@tanstack/react-virtual": "^3.1.2",
+    "@dnd-kit/utilities": "^3.2.2",
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
     "@tanstack/react-query": "^5.85.3",
+    "@tanstack/react-virtual": "^3.1.2",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/three": "^0.179.0",
+    "@types/uuid": "^10.0.0",
     "classnames": "^2.5.1",
     "framer-motion": "^11.1.7",
+    "lucide-react": "^0.469.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
     "recharts": "^2.12.7",
     "socket.io-client": "^4.8.1",
     "three": "^0.164.1",
     "three-stdlib": "^2.30.4",
-  "zustand": "^4.5.5",
-  "lucide-react": "^0.469.0"
+    "uuid": "^11.1.0",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
